--- a/src/components/sidePanel/SidePanel.css
+++ b/src/components/sidePanel/SidePanel.css
@@ -25,6 +25,7 @@
     font-size: 2.5em;
     margin-left: 0.70rem;
     font-weight: 800;
+    text-align: center;
 }
 
 .opcoesPanel {
@@ -72,4 +73,11 @@
     color: #fff;
     font-weight: bold;
     padding-right: 5rem;
+}
+
+@media screen and (max-width:1100px){
+    .opcoesPanel,
+    .headerPanel h2 {
+        display: none;
+    }
 }
